<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="primainteraktif.cameo.LoginActivity">


    <TextView
        android:id="@+id/HeaderLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/icons"
        style="@style/HeaderTextPage"
        android:text="@string/HeaderLogin" />

    <TextView
        android:id="@+id/infoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="34dp"
        android:padding="28dp"
        android:lineSpacingExtra="10dp"
        android:elegantTextHeight="true"
        android:text="@string/infologin"
        android:layout_below="@+id/HeaderLogin"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"

        >

        <ImageButton
            android:id="@+id/btngoogleimage"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/btngoogle"/>

        <TextView
            android:id="@+id/DemoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:text="@string/skip_this_try_demo_mode" />

    </LinearLayout>


</RelativeLayout>
