<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="primainteraktif.cameo.DeviceSetupActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/HeaderLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            style="@style/HeaderTextPage"
            android:text="@string/set_this_device_as" />
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame_layout_viewer">

            <ImageView
                android:id="@+id/imageView_viewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/optviewer" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Viewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="15dp"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    android:text="@string/viewer" />

                <TextView
                    android:id="@+id/InfoViewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:textSize="13sp"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:paddingBottom="20dp"
                    android:textAlignment="center"
                    android:layout_below="@+id/Viewer"
                    android:background="@android:color/transparent"
                    android:text="@string/infoviewer" />

            </RelativeLayout>
            <ImageView
                android:id="@+id/centang_viewer"
                android:layout_width="wrap_content"
                android:src="@drawable/icon_checklist"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:layout_height="wrap_content" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_layout_viewer"
            android:id="@+id/linearLayout_or">

            <TextView
                android:id="@+id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                style="@style/HeaderTextPage"
                android:padding="15dp"
                android:textSize="16dp"
                android:text="Or" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_or"
            android:id="@+id/frame_layout_camera">

            <ImageView
                android:id="@+id/imageView_camera"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content"
                android:src="@drawable/optcamera" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Viewer_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="15dp"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    android:text="@string/camera" />

                <TextView
                    android:id="@+id/Infocamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingLeft="35dp"
                    android:textSize="13sp"
                    android:paddingRight="35dp"
                    android:paddingBottom="20dp"
                    android:textAlignment="center"
                    android:layout_below="@+id/Viewer_camera"
                    android:background="@android:color/transparent"
                    android:text="@string/infoviewer" />

            </RelativeLayout>
            <ImageView
                android:id="@+id/centang_camera"
                android:layout_width="wrap_content"
                android:src="@drawable/icon_checklist"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:layout_height="wrap_content" />

        </FrameLayout>



    </LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

       <!-- <Button
            android:id="@+id/btnlogout"
            android:text="logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />-->

        <Button
            android:id="@+id/sbm_setup_device"
            android:text="Next"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/buttonshape" />

    </LinearLayout>



</RelativeLayout>
